--- a/STRANGER_MOOD-store .html
+++ b/STRANGER_MOOD-store .html
@@ -125,7 +125,7 @@ h1 {
 
  <main>
     <!--                             image                         -->
-    <img class="product-image" src="c:\Users\HP\Pictures\creation\post\new post 3.png"  alt="new collection">
+    <img class="product-image" src="https://github.com/Triplenine-999/strangermood-store/blob/29ad9a2ee6cc3d592f816247fbbc5ae7296807d2/1132b6b0-12c1-4346-b04f-48cdff75e9bd.jpeg?raw=true"  alt="new collection">
 
     <!--titre--> 
     
